Добавил ссылки и картинки

--- a/Report/StochAn_report.tex
+++ b/Report/StochAn_report.tex
@@ -110,7 +110,7 @@
 \begin{enumerate}
 	\item  Реализовать генератор схемы Бернулли с заданной вероятностью успеха $p$. Построить на его основе датчик биномиального распределения.
 	\item Реализовать генератор геометрического распределения. Проверить для него свойство отсутствия памяти.
-	\item Рассмотреть игру в орлянку - бесконечную последовательность независимых испытаний с бросанием правильной монеты. Выигрыш $S_n$ определяется как сумма по $n$ испытаниям значений $1$ и $-1$ в зависимости от выпавшей стороны. Проиллюстрировать поведение $Y(i) = \dfrac{S_i}{\sqrt{n}}$ как функцию номера испытания $i = 1, \ldots, n$ для отдельно взятой траектории. Дать теоретическую оценку $Y(n)$ при $n \to \infty$.
+	\item Рассмотреть игру в орлянку --- бесконечную последовательность независимых испытаний с бросанием правильной монеты. Выигрыш $S_n$ определяется как сумма по $n$ испытаниям значений $1$ и $-1$ в зависимости от выпавшей стороны. Проиллюстрировать поведение $Y(i) = \dfrac{S_i}{\sqrt{n}}$ как функцию номера испытания $i = 1, \ldots, n$ для отдельно взятой траектории. Дать теоретическую оценку $Y(n)$ при $n \to \infty$.
 \end{enumerate}
 
 \subsection{Теоретическая часть}
@@ -177,7 +177,34 @@ $$\dfrac{S_n - \mu n}{\sigma \sqrt{n}} \overset{d}{\to} \mathcal{N}(0, 1)\ \text
 Поскольку при описанной игре в орлянку математическое ожидание равно $0$, а дисперсия равна $1$, распределение $Y(i)$ сходится к стандартному нормальному по ЦПТ. 
 
 \subsection{Результаты работы программы}
+
+\paragraph{Проверка датчика биномиального распределения} На рис. 1 приведена гистограмма выборки, полученной с помощью построенного датчика.
+\begin{figure}[h]
+	\center
+    \includegraphics[scale=0.7]{1_1.pdf}
+    \caption{Моделирование биномиального распределения с $n = 10^4,\, p = 0.5$.}
+\end{figure}
+
 Проверка отсутствия памяти. Случайные величины $\xi \sim \mathrm{Geom}(p)$ и $\eta = (\xi | \xi \geq \tau) - \tau$ должны иметь одинаковое распределение.
+\begin{figure}[h]
+	\center
+    \includegraphics[scale=0.5]{1_2.pdf}
+    \hfill
+    \includegraphics[scale=0.5]{1_3.pdf}
+    \caption{Сравнение гистограмм и выборочных функций распределения $\xi$ и $\eta$.}
+\end{figure}
+
+\begin{figure}[h]
+	\center
+    \includegraphics[scale=0.7]{1_4.pdf}
+    \caption{Траектории $Y\A$ при игре в орлянку.}
+\end{figure}
+
+\begin{figure}[h]
+	\center
+    \includegraphics[scale=0.7]{1_5.pdf}
+    \caption{Выборка случайных величин, совпадающих по распределению с $Y(10^4)$.}
+\end{figure}
 
 \section{Задание 2}
 \subsection{Постановка задачи}
@@ -208,7 +235,7 @@ $ \sum\limits_{k=n+1}^\infty\left(2/3\right)^{k} = 3^{-n},$
 $$H_0\colon \ F(\cdot) = F_0(\cdot),$$
 где $F_0(\cdot)$ - функция Кантора. Для этого вычислим
 $$D_n = \sup_x|F_n(x) - F_0(x)|,$$
-где $F_n(\cdot)$ - эмпирическая функция распределения, построенная по выборке размера $n$. Положим $\gamma = K^{-1}(1-\alpha)$. Здесь $\alpha$ - уровень значимости, а $K^{-1}(x)$ - квантиль распределния Колмогорова порядка $x$. 
+где $F_n(\cdot)$ --- эмпирическая функция распределения, построенная по выборке размера $n$. Положим $\gamma = K^{-1}(1-\alpha)$. Здесь $\alpha$ - уровень значимости, а $K^{-1}(x)$ --- квантиль распределния Колмогорова порядка $x$. 
 
 Будем отвергать гипотезу в случае, когда
 $$\sqrt{n}D_n \geq \gamma.$$
@@ -217,7 +244,7 @@ $$\sqrt{n}D_n \geq \gamma.$$
 
 \paragraph{Критерий Смирнова} Для того, чтобы по двум выборкам проверить, имеют ли они одинаковое распределение, используется {\it критерий Смирнова}. 
 
-Рассматриваются $X = (x_1, \ldots, x_n),\, Y = (y_1, \ldots, y_m)$ - выборки, элементы которых имеют функции распределения $F$ и $G$ соответственно, а $F_n, G_m$ - построенные по ним эмпирические функции распределения. Обозначим 
+Рассматриваются $X = (x_1, \ldots, x_n),\, Y = (y_1, \ldots, y_m)$ --- выборки, элементы которых имеют функции распределения $F$ и $G$ соответственно, а $F_n, G_m$ --- построенные по ним эмпирические функции распределения. Обозначим 
 $$D_{mn} = \sup_{x \in \mathbb{R}}|F_n(x) - G_n(x)|.$$
 Теорема Смирнова \cite{Smir} утверждает, что
 $$\mathbb{P}\left(\sqrt{\frac{mn}{m+n}}D_{mn} < x\right) \to K(x).$$
@@ -247,6 +274,20 @@ $$\mathbb{E}X^2 = \frac13 + \frac19\mathbb{E}X^2, \quad \mathbb{E}X^2 = \frac38,
 
 Оценим по выборке математическое ожидание и дисперсию, используя статистики $$\overline{x} = \dfrac{1}{n}\sum\limits_{k=1}^{n}x_k, \quad {\hat \sigma}^2 = \dfrac{1}{n}\sum\limits_{k=1}^{n}(x_k - \overline{x})^2.$$
 \subsection{Результаты работы программы}
+\begin{figure}[h]
+	\center
+    \includegraphics[scale=0.7]{2_1.pdf}
+    \caption{Работа датчика сингулярного распределения.}
+\end{figure}
+
+\begin{figure}[h]
+	\center
+    \includegraphics[scale=0.5]{2_2.pdf}
+    \hfill
+    \includegraphics[scale=0.5]{2_3.pdf}
+    \caption{Оценка моментов сингулярного распределения.}
+\end{figure}
+
 
 \section{Задание 3}
 \subsection{Постановка задачи}
@@ -325,8 +366,27 @@ $$ V = \dfrac{m-1}{n-1}\dfrac{\sum_i(X_i - \bar X)^2}{\sum_i(Y_i - \bar Y)^2}$$
 
 Будем отклонять $H_0$, если $V \leq \gamma_1$ или $V \geq \gamma_2$. Здесь
 $$\gamma_1 = F_{n-1, m-1}^{-1}\left(\frac{\alpha}{2}\right), \quad
-\gamma_2 = F_{n-1, m-1}^{-1}\left(1 - \frac{\alpha}{2}\right),$$  а $F_{n-1, m-1}^{-1}(x)$ - квантиль F-распределения с параметрами $n - 1$ и $m - 1$ порядка $x$.
+\gamma_2 = F_{n-1, m-1}^{-1}\left(1 - \frac{\alpha}{2}\right),$$  а $F_{n-1, m-1}^{-1}(x)$ --- квантиль F-распределения с параметрами $n - 1$ и $m - 1$ порядка $x$.
 \subsection{Результаты работы программы}
+\begin{figure}[h]
+	\center
+    \includegraphics[scale=0.5]{3_1.pdf}
+    \hfill
+    \includegraphics[scale=0.5]{3_2.pdf}
+    \caption{Сравнение гистограмм и выборочных функций распределения $\xi$ и $\eta$.}
+\end{figure}
+
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.7]{3_3.pdf}
+	\caption{Распределение $Y = \min(X_1, \ldots, X_n)$.}
+\end{figure}
+
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.7]{3_4.pdf}
+	\caption{Моделирование стандартного нормального распределения полярным методом.}
+\end{figure}
 
 \section{Задание 4}
 \subsection{Постановка задачи}
@@ -380,12 +440,36 @@ $$\mathbb{P}(\eta < x) = \mathbb{P}\left(\xi < \frac{x - \mu}{\sigma}\right)$$
 
 \paragraph{Сравнение скорости моделирования нормального распределения} Для сравнения скорости работы построенных датчиков, создадим логарифмическую сетку для размеров выборки размера $n$. Для выборки каждого размера будем запускать датчик $m$ раз, а затем в качестве оценки времени работы брать медиану измерений как устойчивую к большим выбросам оценку среднего.
 \subsection{Результаты работы программы}
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.7]{4_1.pdf}
+	\caption{Моделирование стандартного распределения Коши.}
+\end{figure}
 
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.5]{4_2.pdf}
+	\hfill
+	\includegraphics[scale=0.5]{4_3.pdf}
+	\caption{normplot для $\mathcal{N}(0, 1)$ и $\mathcal{N}(2, 9)$.}
+\end{figure}
+
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.7]{4_4.pdf}
+	\caption{normplot для стандартного распределения Коши.}
+\end{figure}
+
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.7]{4_5.pdf}
+	\caption{Сравнение времени работы датчиков.}
+\end{figure}
 \section{Задание 5}
 \subsection{Постановка задачи}
 \begin{enumerate}
 \item Пусть $X_i \sim \mathcal{N}(\mu, \sigma^2)$. Убедиться эмпирически в справедливости ЗБЧ и ЦПТ: исследовать поведение суммы $S_n$ и эмпирического распределения величины
-$$\sqrt{n}\left(\frac{S_n}{n} - a\right).$$
+$$\sqrt{n}\left(\frac{S_n}{n} - \mu\right).$$
 \item Считая $\mu$ и $\sigma$ неизвестными, для пункта 1 построить доверительные интервалы для среднего и дисперсии.
 \item Пусть $X_i \sim \mathcal{C}(a, b)$ имеет распределение Коши со сдвигом $a$ и масштабом $b$. Проверить эмпирически, как ведут себя суммы $\frac{S_n}{n}$. Результат объяснить, а также найти распределения данных сумм.
 \end{enumerate}
@@ -397,7 +481,7 @@ $$\sqrt{n}\left(\frac{S_n}{n} - a\right).$$
 $$\dfrac{1}{n}\Sum{i=1}{n}X_i \overset{\text{{\rm п.н.}}}{\to} \Me X_1.$$ 
 \end{Th}
 
-По ЗБЧ величина $S_n$ должна вести себя асимптотически как $n\Me X_1$, а случайная величина $\sqrt{n}\left(\dfrac{S_n}{n} - a\right)$ сходится по распределению к стандартному нормальному распределению по ЦПТ. 
+По ЗБЧ величина $S_n$ должна вести себя асимптотически как $n\Me X_1$, а случайная величина $\sqrt{n}\left(\dfrac{S_n}{n} - \mu\right)$ сходится по распределению к $\mathcal{N}(0, \sigma^2)$. 
 
 \paragraph{Доверительный интервал для математического ожидания}
 Так как статистика $$U = \sqrt{n}\frac{\bar X - \mu}{\sigma'}, \quad \sigma' = \sqrt{\dfrac{\sum_{i=1}^n(X_i - \bar X)^2}{n-1}}$$
@@ -425,6 +509,37 @@ $$\varphi_{\frac{S_n}{n}}(t) = \left[\varphi\left(\frac{t}{n}\right)\right]^n = 
 поэтому $\dfrac{S_n}{n} \sim \mathcal{C}(a, b)$.
 
 \subsection{Результаты работы программы}
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.7]{5_1.pdf}
+	\caption{Поведение нормированных сумм.}
+\end{figure}
+
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.7]{5_2.pdf}
+	\caption{Выборка из $\sqrt{n}\left(\frac{S_n}{n} - \mu\right)$ при $n = 10^4$.}
+\end{figure}
+
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.5]{5_3.pdf}
+	\hfill
+	\includegraphics[scale=0.5]{5_4.pdf}
+	\caption{Доверительные интервалы для $\mu$ и $\sigma^2$. Истинные значения $\mu = 0,\, \sigma = 2$.}
+\end{figure}
+
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.7]{5_5.pdf}
+	\caption{<<ЗБЧ>> для распределения Коши.}
+\end{figure}
+
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.7]{5_6.pdf}
+	\caption{Выборка из $\dfrac{S_n}{n}$ для распределения Коши с $a = 1, \, b = 2$ при $n = 10^4$.}
+\end{figure}
 
 \section{Задание 6}
 \subsection{Постановка задачи}
@@ -432,14 +547,14 @@ $$\varphi_{\frac{S_n}{n}}(t) = \left[\varphi\left(\frac{t}{n}\right)\right]^n = 
 \item Посчитать интеграл
 $$J = \int\limits_{-\infty}^{+\infty}\int\limits_{-\infty}^{+\infty}\ldots\int\limits_{-\infty}^{+\infty} \dfrac{e^{-\left(x_1^2 + \ldots + x_{10}^2 + \frac{1}{2^7x_1^2\ldots x_{10}^2}\right)}}{x_1^2\ldots x_{10}^2}dx_1dx_2\ldots dx_{10}$$
 \begin{itemize}
-	\item методом Монте-Карло;
+	\item методом Монте--Карло;
 	\item методом квадратур, сводя задачу к вычислению собственного интеграла Римана.
 \end{itemize} 
 \item Для каждого случая оценить точность вычислений.
 \end{enumerate}
 
 \subsection{Теоретическая часть}
-\paragraph{Метод Монте-Карло} Отметим, что случайный вектор $X = (X_1, \ldots, X_{10})$, у которого каждая компонента распределена нормально с $\mu = 0,\ \sigma^2 = \frac12$, имеет плотность
+\paragraph{Метод Монте--Карло} Отметим, что случайный вектор $X = (X_1, \ldots, X_{10})$, у которого каждая компонента распределена нормально с $\mu = 0,\ \sigma^2 = \frac12$, имеет плотность
 $$p(x) = \frac{1}{\pi^5}e^{-(x_1^2 + \ldots + x_{10}^2)}, \quad x \in \Real^{10}.$$
 Перепишем интеграл в виде
 $$ J = \pi^5 \int\limits_{\mathbb{R}^{10}} ye^{-\frac{y}{128}}p(x)dx, \quad y = \left(\prod_{k=1}^{10} x_k\right)^{-2}$$
@@ -449,7 +564,7 @@ $\mathbb{E}f(Y),$
 
 По усиленному закону больших чисел $$\dfrac1n \Sum{k=1}{n} f(Y_k) \overset{\text{п.н.}}{\rightarrow} \mathbb{E}f(Y) = J.$$
 
-\paragraph{Оценка точности} Для метода Монте-Карло найдем ошибку $\varepsilon$, вероятность превзойти которую при моделировании выборки размера $n$ не превосходит $\alpha$. Воспользуемся для этого неравентсвом Чебышёва:
+\paragraph{Оценка точности} Для метода Монте--Карло найдем ошибку $\varepsilon$, вероятность превзойти которую при моделировании выборки размера $n$ не превосходит $\alpha$. Воспользуемся для этого неравентсвом Чебышёва:
 $$\mathbb{P}\left(\left|\dfrac{1}{n}\sum_{k=1}^nf(Y_k) - \mathbb{E}f(Y)\right| \geq \varepsilon \right) \leq \dfrac{\Var [f(Y)]}{n\varepsilon^2} = \alpha.$$
 
 Дисперсию $f(Y)$ будем аппроксимировать выборочной дисперсией $\dfrac{1}{n}\sum\limits_i \left(f(Y_i) - \overline{f(Y)}\right)^2$, которая является состоятельной оценкой.
@@ -465,7 +580,7 @@ $$\int\limits_{-\frac{\pi}{2}}^{\frac{\pi}{2}}\ldots\int\limits_{-\frac{\pi}{2}}
 $$x_i = -\frac{\pi}{2} + h(i + 0.5), \quad i = 0, \ldots, m-1,$$
 В силу четности $f$ можно вычислить интеграл на $\left[0, \dfrac{\pi}2\right]$ по каждому измерению, и затем умножить результат на $2^{10}$.
 
-$h = \dfrac{\pi}{m}$ - шаг сетки. Элементы сетки - центры отрезков, полученных при разбиении $\left[-\dfrac{\pi}{2}, \dfrac{\pi}{2}\right]$ на $m$ равных частей. Разобьем $\left[-\dfrac{\pi}{2}, \dfrac{\pi}{2}\right]^{10}$ на гиперкубики с центрами $$(x_{i_1}, \ldots, x_{i_{10}}),\ i_k = 0, \ldots, m-1,\ k = 1, \ldots, 10$$ и мерой $h^{10}$ и воспользуемся методом прямоугольников
+$h = \dfrac{\pi}{m}$ --- шаг сетки. Элементы сетки --- центры отрезков, полученных при разбиении $\left[-\dfrac{\pi}{2}, \dfrac{\pi}{2}\right]$ на $m$ равных частей. Разобьем $\left[-\dfrac{\pi}{2}, \dfrac{\pi}{2}\right]^{10}$ на гиперкубики с центрами $$(x_{i_1}, \ldots, x_{i_{10}}),\ i_k = 0, \ldots, m-1,\ k = 1, \ldots, 10$$ и мерой $h^{10}$ и воспользуемся методом прямоугольников
 $$J \approx h^{10}\sum_{i_1=0}^{m-1}\ldots\sum_{i_{10}=0}^{m-1}f(x_{i_1}, \ldots, x_{i_{10}})$$
 
 Для вычисления этой суммы потребуется $m^{10}$ вычислений функции $f$, что уже при $m = 5$ потребует около $10^7$ итераций. Для оптимизации вычислений воспользуемся симметричностью $f$:
@@ -531,11 +646,26 @@ $$t_{k+1} = t_k m^{\frac{1}{1+0.1|\Delta g|}}.$$
 \end{enumerate}
 
 \subsection{Результаты работы программы}
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.7]{7_1.pdf}
+	\caption{Результаты работы метода имитации отжига}
+\end{figure}
+
+\subsection{Результаты работы программы}
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.5]{7_2.pdf}
+	\hfill
+	\includegraphics[scale=0.5]{7_3.pdf}
+	\caption{Распределение величин $\|x - x^*\|$ и $\|f(x) - f(x^*)\|$.}
+\end{figure}
+
 
 \section{Задание 8}
 \subsection{Постановка задачи}
 \begin{enumerate}
-	\item Применить метод Монте-Карло к решению первой краевой задачи для двумерного уравнения Лапласа в единичном круге:
+	\item Применить метод Монте--Карло к решению первой краевой задачи для двумерного уравнения Лапласа в единичном круге:
 $$
 \begin{cases}
 \Delta u = 0, \quad (x, y) \in D = \{(x, y)\colon \ \ x^2 + y^2 \leq 1\}\\
@@ -544,10 +674,10 @@ u \in C^2(D), \ f \in C(\partial D)
 \end{cases}
 $$
 
-Для функции $f(x, y) = x^2 - y^2$ найти аналитическое решение и сравнить с полученным по методу Монте-Карло.
+Для функции $f(x, y) = x^2 - y^2$ найти аналитическое решение и сравнить с полученным по методу Монте--Карло.
 \end{enumerate}
 \subsection{Теоретическая часть}
-\paragraph{Применение метода Монте-Карло}
+\paragraph{Применение метода Монте--Карло}
 Введем на плоскости сетку $x_{ij} = (-1 + ih, -1 + jh)$ с шагом $h$ и назовем внутренними узлы, для которых все 4 соседних узла лежат в круге. Узлы, лежащие в круге, но не удовлетворяющие этому условию, будем называть крайними. 
 
 Аппроксимируя вторые частные производные, можно свести задачу Дирихле к следующей разностной схеме:
@@ -568,17 +698,29 @@ p(x_{ij}, x_{pq}) = \dfrac14(p(x_{i-1,j}, x_{pq}) + p(x_{i+1, j}, x_{pq}) + p(x_
 \end{equation}
 для внутренних узлов $x_{ij}$ и $p(x_{ij}, x_{ij}) = 1$ для крайних узлов.
 
-Рассмотрим теперь случайную величину $\xi_{ij} = f(x_{pq})$ - значение $f$ в конечной точке пути.
+Рассмотрим теперь случайную величину $\xi_{ij} = f(x_{pq})$ --- значение $f$ в конечной точке пути.
 Так как $\mathbb{E}\xi_{ij} = \sum_{p, q}p(x_{ij}, x_{pq})f(x_{pq})$, используя формулу (\ref{Dirich}) связи вероятностей на соседних узлах, получим
 $$\mathbb{E}\xi_{ij} = \dfrac14(\mathbb{E}\xi_{i-1,j} + \mathbb{E}\xi_{i+1, j} + \mathbb{E}\xi_{i, j-1} + \mathbb{E}\xi_{i,j+1}) \text{ для внутренних узлов,}$$
 $$\mathbb{E}\xi_{ij} = f_{ij} \text{ для крайних}.$$
 
 Видно, что эти уравнения совпадают с разностной схемой, аппроксимирующей исходную задачу.
 
-Значения $\mathbb{E}\xi_{ij}$ в каждом узле можно вычислить методом Монте-Карло, моделируя описанный выше случайных процесс.
+Значения $\mathbb{E}\xi_{ij}$ в каждом узле можно вычислить методом Монте--Карло, моделируя описанный выше случайных процесс.
 
 Для оптимизации вычислений воспользуемся тем, что моделируемый процесс случайного блуждания обладает марковским свойством, поэтому при прохождении траектории через промежуточные узлы дальнейший путь частицы можно рассматривать как процесс, начавшийся в этом промежуточном узле.
 \subsection{Результаты работы программы}
+
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.9]{8_1.pdf}
+	\caption{Решение, полученное методом Монте--Карло.}
+\end{figure}
+
+\begin{figure}[h]
+	\center
+	\includegraphics[scale=0.9]{8_2.pdf}
+	\caption{Аналитическое решение.}
+\end{figure}
 
 \section{Задание 9}
 \subsection{Постановка задачи}
@@ -606,7 +748,7 @@ $$\mathbb{E}\xi_{ij} = f_{ij} \text{ для крайних}.$$
 \end{enumerate}
 
 \paragraph{Винеровский процесс}
-Винеровский процесс - гауссовский процесс с независимыми приращениями такой, что
+Винеровский процесс --- гауссовский процесс с независимыми приращениями такой, что
 \begin{enumerate}
 	\item $W(0) \overset{\text{п.н.}}{=} 0$
 	\item $W(t + h) - W(t) \sim \mathcal{N}(0, \sigma^2h)$
@@ -624,7 +766,7 @@ $$K(t_1, t_2) = \min(t_1, t_2) \sigma^2.$$
 Найдем теперь для $t_1 < t_2 < t_3$ распределение $Y = [W(t_2)|W(t_1) = x_1, W(t_3) = x_3]$. 
 Так как $W(t)$ имеет нормальное распределение с параметрами $0$ и $\sigma^2t$, $Y$ имеет плотность
 $$p_Y(x_2) = \dfrac{p_{123}(x_1, x_2, x_3)}{p_{13}(x_1, x_3)},$$
-где $p_{123}\A$ -совместная плотность $(W(t_1), W(t_2), W(t_3)),\ $\ $p_{13}\A$ - совместная плотность вектора $(W(t_1), W(t_3))$.
+где $p_{123}\A$ --- совместная плотность $(W(t_1), W(t_2), W(t_3)),\ $\ $p_{13}\A$ --- совместная плотность вектора $(W(t_1), W(t_3))$.
 
 Известно, что плотность $n$-мерного нормального распределения с матожиданием $\mu$ и ковариационной матрицей $\Sigma$ имеет вид
 \begin{equation}
@@ -652,7 +794,7 @@ $$p_Y(x_2) = C \exp\left\{ -\dfrac12\dfrac{4}{t_3 - t_1} \left(x_2 - \dfrac{x_1 
 
 \paragraph{Процесс Орнштейна-Уленбека}
 
-Процесс Орнштейна-Уленбека - это стационарный марковский гауссовский процесс.
+Процесс Орнштейна-Уленбека --- это стационарный марковский гауссовский процесс.
 Известно \cite{Feller}, что для такого процесса 
 $$\rho(X(t_1), X(t_3)) = \rho(X(t_1), X(t_2))\rho(X(t_2), X(t_3)), \quad t_1 < t_2 < t_3,$$
 где $\rho\A$ --- коэффициент корреляции.
@@ -697,7 +839,23 @@ $$
 
 После преобразований находим, что $$Y \sim \mathcal{N}\left(\dfrac{x_1 + x_3}{e^{\lambda h} + e^{-\lambda h}},\dfrac{\sigma^2 (e^{2\lambda h} - 1)}{e^{2\lambda h} + 1}\right).$$
 \subsection{Результаты работы программы}
+\begin{figure}
+	\center
+	\includegraphics[scale=0.7]{9_1.pdf}
+	\caption{Моделирование стандартного винеровского процесса $W_t$.}
+\end{figure}
 
+\begin{figure}
+	\center
+	\includegraphics[scale=0.7]{9_2.pdf}
+	\caption{Моделирование процесса Орнштейна-Уленбека с $\lambda = 5,\, \sigma = 1$.}
+\end{figure}
+
+\begin{figure}
+	\center
+	\includegraphics[scale=0.7]{9_3.pdf}
+	\caption{Моделирование процесса Орнштейна-Уленбека с $\lambda = 1,\, \sigma = 1$.}
+\end{figure}
 \section{Задание 10}
 \subsection{Постановка задачи}
 Произвести фильтрацию одномерного процесса Орнштейна-Уленбека:
@@ -727,7 +885,7 @@ $$R(t_{n+1}, t_{n+1}) = \mathrm{var}(x_{n+1}) = a^2\Var(x_n) + q = a^2\sigma^2 +
 Отсюда легко выразить
 $$a = e^{-\lambda h}, \quad q = \sigma^2(1 - e^{-2\lambda h}).$$
 
-Опишем один шаг дискретного фильра Калмана. Обозначим за $\hat x_{n|n}$ оценку значения $x_n$ при известных $y_1, \ldots y_n$. $\hat x_{n|n-1}$ - экстраполяция процесса на следующий шаг в соответствии с динамической системой. Через $p_{n|n}$ будем обозначать дисперсию ошибки фильтрации на $n$-м шаге, через $p_{n|n-1}$ - прогнозируемую на следующем шаге дисперсию.
+Опишем один шаг дискретного фильра Калмана. Обозначим за $\hat x_{n|n}$ оценку значения $x_n$ при известных $y_1, \ldots y_n$. $\hat x_{n|n-1}$ --- экстраполяция процесса на следующий шаг в соответствии с динамической системой. Через $p_{n|n}$ будем обозначать дисперсию ошибки фильтрации на $n$-м шаге, через $p_{n|n-1}$ --- прогнозируемую на следующем шаге дисперсию.
 
 \begin{enumerate}
 	\item Прогнозируем значение процесса и дисперсию ошибки
@@ -743,22 +901,58 @@ $$ \hat x_{n|n} = \hat x_{n|n-1} + k_n\delta_n, \quad p_{k|k} = (1 - k_n)p_{n|n-
 Поскольку рассматривается линейный фильтр гауссовского процесса с гауссовским шумом, ошибка фильтрации будет иметь нормальное распределение, а доверительный интервал с уровнем доверия $\alpha$ будет иметь вид
 $$[\hat x_{n|n} - \Delta, \, \hat x_{n|n} + \Delta], \quad \Delta = -\sqrt{p_{n|n}}\Phi^{-1}\left(\dfrac{\alpha}2\right).$$
 \subsection{Результаты работы программы}
+\begin{figure}
+	\center
+	\includegraphics[scale=0.7]{10_1.pdf}
+	\caption{Ошибка распределена нормально, $r = 0.01$.}
+\end{figure}
+
+\begin{figure}
+	\center
+	\includegraphics[scale=0.7]{10_2.pdf}
+	\caption{Результат работы фильтра Калмана.}
+\end{figure}
+
+\begin{figure}
+	\center
+	\includegraphics[scale=0.7]{10_3.pdf}
+	\caption{Доверительные интервалы.}
+\end{figure}
+
+\begin{figure}
+	\center
+	\includegraphics[scale=0.7]{10_4.pdf}
+	\caption{Ошибка имеет распределение Коши с параметром масштаба $10^{-4}$.}
+\end{figure}
+
+\begin{figure}
+	\center
+	\includegraphics[scale=0.7]{10_5.pdf}
+	\caption{Результат работы фильтра Калмана.}
+\end{figure}
+
+\begin{figure}
+	\center
+	\includegraphics[scale=0.7]{10_6.pdf}
+	\caption{Доверительные интервалы.}
+\end{figure}
+
 
 \section{Задание 11}
 \subsection{Постановка задачи}
 Построить двумерное пуассоновское поле, отвечающее сложному пуассоновскому процессу:
 \begin{enumerate}
-	\item Первая интерпретация: система массового обслуживания. При этом, первая координата поля - время поступления заявки в СМО (равномерное распределение), вторая - время ее обслуживания (распределение $\chi^2$ с 10 степенями свободы).
-	\item Вторая интерпретация: система массового обслуживания с циклической активностью $\lambda(1 + \cos(t))$ и единичными скачками. Свести данную задачу при помощи метода Льюиса и Шадлеара к моделированию двумерного пуассоновского поля, где первая координата имеет равномерное распределение, а вторая - распределение Бернулли.
-	\item Третья интерпретация: работа страховой компании. Первая координата - момент наступления страхового случая (равномерное распределение), вторая координата - величина ущерба (распределение Парето). Поступление капитала по времени линейно со скоростью $c > 0$, начальный капитал $W > 0$.
+	\item Первая интерпретация: система массового обслуживания. При этом, первая координата поля --- время поступления заявки в СМО (равномерное распределение), вторая --- время ее обслуживания (распределение $\chi^2$ с 10 степенями свободы).
+	\item Вторая интерпретация: система массового обслуживания с циклической активностью $\lambda(1 + \cos(t))$ и единичными скачками. Свести данную задачу при помощи метода Льюиса и Шадлеара к моделированию двумерного пуассоновского поля, где первая координата имеет равномерное распределение, а вторая --- распределение Бернулли.
+	\item Третья интерпретация: работа страховой компании. Первая координата --- момент наступления страхового случая (равномерное распределение), вторая координата --- величина ущерба (распределение Парето). Поступление капитала по времени линейно со скоростью $c > 0$, начальный капитал $W > 0$.
 	\item Для каждой системы рассмотреть все возможные случаи поведения системы в зависимости от значения параметров.
 \end{enumerate}
 
 \subsection{Теоретическая часть}
 \paragraph{Моделирование СМО}
-Будем моделировать систему массового обслуживания на отрезке времени $[0, T]$. Обозначим $\eta \sim Pois(\lambda T)$ число заявок, поступивших в систему за время от $0$ до $T$. $\lambda$ - интенсивность поступления заявок, то есть среднее число новых заявок в единицу времени.
+Будем моделировать систему массового обслуживания на отрезке времени $[0, T]$. Обозначим $\eta \sim Pois(\lambda T)$ число заявок, поступивших в систему за время от $0$ до $T$. $\lambda$ --- интенсивность поступления заявок, то есть среднее число новых заявок в единицу времени.
 
-Пусть $t_1, \ldots, t_\eta$ - времена поступления заявок, $t_j \sim \mathcal{U}[0, T],\ $ $t_{(j)}$ - $j$-я порядковая статистика, $s_j \sim \chi^2(10)$ - время обработки $j$-й заявки (то есть заявки, поступившей в момент $t_{(j)}$).
+Пусть $t_1, \ldots, t_\eta$ --- времена поступления заявок, $t_j \sim \mathcal{U}[0, T],\ $ $t_{(j)}$ - $j$-я порядковая статистика, $s_j \sim \chi^2(10)$ --- время обработки $j$-й заявки (то есть заявки, поступившей в момент $t_{(j)}$).
 
 Обозначим $X_j$ время окончания обработки $j$-й заявки. Заметим, что
 $$X_1 = t_{(1)} + s_1, \quad 
@@ -782,7 +976,7 @@ $$N(t) = \sum_{j=1}^{\eta}\I_{t_{(j)} \leq t < X_j},$$
 Для моделировния СМО с циклической интенсивностью $\lambda(t) = \lambda(1 + \cos(t))$ будем использовать метод Льюиса и Шедлеара (его обоснование можно найти в \cite{Lewis}). Так как $\lambda(t) \leq 2\lambda$ для любых $t$, будем использовать однородный пуассоновский процесс с интенсивностью $\lambda^* = 2 \lambda$. Опишем алгоритм моделирования.
 
 \begin{enumerate}
-	\item Генерируем $\eta \sim Pois(\lambda^*)$ --- число поступивших заявок --- и $t_1^*, \ldots, t_\eta^* \sim \mathcal{U}[0, T]$ - времена поступления заявок в процессе $N^*(\cdot)$.
+	\item Генерируем $\eta \sim Pois(\lambda^*)$ --- число поступивших заявок --- и $t_1^*, \ldots, t_\eta^* \sim \mathcal{U}[0, T]$ --- времена поступления заявок в процессе $N^*(\cdot)$.
 	\item Для каждого $j$ удаляем $t_j^*$ из выборки с вероятностью $1 - \dfrac{\lambda(t_j^*)}{\lambda^*(t_j^*)}$.
 	\item Оставшиеся точки являются моментами поступления заявки в процессе $N(\cdot)$.
 \end{enumerate}
@@ -790,7 +984,7 @@ $$N(t) = \sum_{j=1}^{\eta}\I_{t_{(j)} \leq t < X_j},$$
 Так как средняя мгновенная интенсивность процесса равна $\lambda$, сценарии функционирования СМО аналогичны пункту 1.
 
 \paragraph{Моделирование работы страховой компании}
-Пусть число страховых случаев к моменту $t$ равно $N(t)$ - однородный пуассоновский процесс с интенсивностью $\lambda$. Тогда капитал страховой компании изменяется по закону
+Пусть число страховых случаев к моменту $t$ равно $N(t)$ --- однородный пуассоновский процесс с интенсивностью $\lambda$. Тогда капитал страховой компании изменяется по закону
 $$K(t) = W + ct - \sum_{k=1}^{N(t)}\xi_k,$$
 где $\xi_k$ имеет распределение Парето с плотностью $p_\xi(x) = \dfrac{k}{x^{k+1}}, \ x > 1$. Параметр распределения Парето $k > 0$.
 
@@ -808,6 +1002,53 @@ $$\mathbb{E}K(t) = W + ct - \lambda t \dfrac{k}{k-1},$$
 При $k \leq 1$ математическое ожидание $\xi_j$ равно бесконечности, и на достаточно большом промежутке времени компания  будет разоряться при любых значениях $c, W, \lambda > 0$.
 \subsection{Результаты работы программы}
 
+\begin{figure}
+	\center
+	\includegraphics[scale=0.7]{11_1.pdf}
+	\caption{Работа СМО с $\lambda = 0.1$}
+\end{figure}
+
+\begin{figure}
+	\center
+	\includegraphics[scale=0.7]{11_2.pdf}
+	\caption{Работа СМО с $\lambda = 0.05$}
+\end{figure}
+
+\begin{figure}
+	\center
+	\includegraphics[scale=0.7]{11_3.pdf}
+	\caption{Работа СМО с $\lambda = 0.2$}
+\end{figure}
+
+\begin{figure}
+	\center
+	\includegraphics[scale=0.7]{11_4.pdf}
+	\caption{Работа СМО с циклической интенсивностью. $\lambda = 10$}
+\end{figure}
+
+\begin{figure}
+	\center
+	\includegraphics[scale=0.7]{11_5.pdf}
+	\caption{Моделирование работы страховой компании с $W = 30,\, k = 2,\, c = 2,\, \lambda = 1$.}
+\end{figure}
+
+\begin{figure}
+	\center
+	\includegraphics[scale=0.7]{11_6.pdf}
+	\caption{Моделирование работы страховой компании с $W = 30,\, k = 2,\, c = 2,\, \lambda = 1.1$.}
+\end{figure}
+
+\begin{figure}
+	\center
+	\includegraphics[scale=0.7]{11_7.pdf}
+	\caption{Моделирование работы страховой компании с $W = 30,\, k = 2,\, c = 2,\, \lambda = 0.9$.}
+\end{figure}
+
+\begin{figure}
+	\center
+	\includegraphics[scale=0.7]{11_8.pdf}
+	\caption{Моделирование работы страховой компании с $W = 100,\, k = 1,\, c = 8,\, \lambda = 1$.}
+\end{figure}
 \newpage
 \center
 \begin{thebibliography}{0}
@@ -822,7 +1063,7 @@ Kolmogorov A (1933), Sulla determinazione empirica di una legge di distribuzione
 \bibitem{Smir}
 Smirnov, N. (1939), On the estimation of the discrepancy between empirical curves of distribu- tion for two independent samples. Bull. Math. Univ. Moscou 2:2. 
 \bibitem{Ostrem}
-Острем К.Ю. Введение в стохастическую теорию управления. М.: Мир, 1973. - 324 с.
+Острем К.Ю. Введение в стохастическую теорию управления. М.: Мир, 1973. --- 324 с.
 \bibitem{Feller}
 Феллер В. Введение в теорию вероятностей и ее приложения (том 2). М.: Мир, 1967 г. – 765 с.
 \bibitem{Shir}
